--- a/action.yml
+++ b/action.yml
@@ -42,5 +42,6 @@ runs:
         API_KEY: ${{ inputs.api_key }}
         REPOSITORY: ${{ github.repository }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
+        ROOT_PATH: ${{ github.action_path }}
       run: python3 ${{ github.action_path }}/src/main.py
       shell: bash
